[package]
name = "problem"
version = "5.2.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Error handling for command line applications or prototypes"
build = "build.rs"
repository = "https://github.com/jpastuszek/problem"
documentation = "https://docs.rs/problem"
readme = "README.md"
keywords = ["error", "context"]
categories = ["rust-patterns"]
license = "MIT"

[features]
default = ["log", "backtrace"]

[dependencies]
log = { version = "0.4.3", optional = true }
backtrace = { version = "0.3.13", optional = true }

[build-dependencies]
skeptic = "0.13.3"

[dev-dependencies]
skeptic = "0.13.3"
loggerv = "0.7.1"
