[package]
name = "problem"
version = "5.3.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Error handling for command line applications or prototypes"
repository = "https://github.com/jpastuszek/problem"
documentation = "https://docs.rs/problem"
readme = "README.md"
keywords = ["error", "context"]
categories = ["rust-patterns"]
license = "MIT"

[features]
default = ["log", "backtrace"]

[dependencies]
log = { version = "0.4.3", optional = true }
backtrace = { version = "0.3.13", optional = true }

[dev-dependencies]
loggerv = "0.7.1"
